--- a/docker-compose.live.yml
+++ b/docker-compose.live.yml
@@ -3,8 +3,6 @@ version: "2"
 services:
   database:
     image: mysql:5.7
-    expose:
-     - "3306"
     container_name: database
     volumes:
       - ./docker/database/data:/var/lib/mysql
@@ -15,16 +13,14 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     restart: always
-    ports:
-      - "3306:3306"
-
+  
   application:
     build:
       context: ./application
       args:
         UID: ${UID}
-    image: vsea-application-image
-    container_name: vsea-application
+    image: application-image
+    container_name: application
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
